# pyopentui

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  rename_wheel.py
.github/workflows/: publish.yml  test.yml
src/pyopentui/: __init__.py  core.py
tests/: test_basic.py
